@@ -44,7 +44,7 @@ Operations:\n\
 Options:\n\
   -q, --quiet          produce less verbose output\n\
   -b, --backup         backup any modified files\n\
-  -s, --sort           sort tags before displaying or saving\n\
+      --no-sort        do not sort tags before saving\n\
 \n\
 Informative output:\n\
   -l, --list           list the names of all known tags (i.e. Caption, etc.)\n\
@@ -441,7 +441,7 @@ main (int argc, char ** argv)
 	int added_string = 0;
 	int is_quiet = 0;
 	int do_backup = 0;
-	int do_sort = 0;
+	int no_sort = 0;
 	int add_tag = 0;
 	int modify_tag = 0;
 	OpList oplist = { 0, 0 };
@@ -450,7 +450,7 @@ main (int argc, char ** argv)
 	struct option longopts[] = {
 		{ "quiet", no_argument, NULL, 'q' },
 		{ "backup", no_argument, NULL, 'b' },
-		{ "sort", no_argument, NULL, 's' },
+		{ "no-sort", no_argument, NULL, 's' },
 		{ "list", no_argument, NULL, 'l' },
 		{ "list-desc", required_argument, NULL, 'L' },
 		{ "add", required_argument, NULL, 'a' },
@@ -468,7 +468,7 @@ main (int argc, char ** argv)
 	textdomain (IPTC_GETTEXT_PACKAGE);
 	bindtextdomain (IPTC_GETTEXT_PACKAGE, IPTC_LOCALEDIR);
 
-	while ((c = getopt_long (argc, argv, "qsblL:a:m:d:p:v:", longopts, NULL)) >= 0) {
+	while ((c = getopt_long (argc, argv, "qblL:a:m:d:p:v:", longopts, NULL)) >= 0) {
 		char * convbuf;
 		switch (c) {
 			case 'q':
@@ -478,7 +478,7 @@ main (int argc, char ** argv)
 				do_backup = 1;
 				break;
 			case 's':
-				do_sort = 1;
+				no_sort = 1;
 				break;
 			case 'l':
 				print_tag_list ();
@@ -645,6 +645,9 @@ main (int argc, char ** argv)
 			iptc_data_unref (d);
 			continue;
 		}
+
+		if (modified)
+			iptc_data_set_version (d, IPTC_IIM_VERSION);
 		
 		/* Make sure we specify the text encoding for the data */
 		if (added_string) {
@@ -661,7 +664,7 @@ main (int argc, char ** argv)
 			}
 		}
 
-		if (do_sort)
+		if (modified && !no_sort)
 			iptc_data_sort (d);
 
 		if (!is_quiet && ((optind+1) == argc || !modified)) {
